<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="@string/stream_orientation_key"
        app:title="@string/stream_orientation_title"
        app:summary="@string/stream_orientation_summary"
        app:defaultValue="@string/stream_orientation_value_auto"
        app:entryValues="@array/stream_orientation_values"
        app:entries="@array/stream_orientation_entries"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="@string/default_video_encoder"
        app:key="@string/video_encoder_key"
        app:title="@string/video_encoder"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="@string/video_resolution_hardware_filter_key"
        app:title="@string/video_resolution_hardware_filter_title"
        app:summary="@string/video_resolution_hardware_filter_summary" />

    <ListPreference
        app:defaultValue="@string/default_video_resolution"
        app:key="@string/video_resolution_key"
        app:title="@string/video_resolution"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="@string/default_fps"
        app:entries="@array/FpsEntries"
        app:entryValues="@array/FpsEntries"
        app:key="@string/camera_fps_key"
        app:title="@string/camera_fps"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="@string/match_fps_key"
        app:title="@string/match_fps_title"
        app:disableDependentsState="true" />

    <Preference
        app:key="@string/video_fps_note_key"
        app:summary="@string/video_fps_note_summary"
        app:selectable="false" />

    <ListPreference
        app:dependency="@string/match_fps_key"
        app:defaultValue="@string/default_fps"
        app:entries="@array/FpsEntries"
        app:entryValues="@array/FpsEntries"
        app:key="@string/video_fps_key"
        app:title="@string/video_fps"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:max="10000"
        app:defaultValue="@string/default_video_bitrate"
        app:key="@string/video_bitrate_key"
        app:min="200"
        app:showSeekBarValue="true"
        app:title="@string/video_bitrate"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:key="@string/video_profile_key"
        app:title="@string/video_profile"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:key="@string/video_level_key"
        app:title="@string/video_level"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>
