<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Audio is always enabled - toggle disabled -->
    <SwitchPreference
        android:defaultValue="true"
        app:key="@string/audio_enable_key"
        app:title="@string/audio_enable"
        app:enabled="false" />

    <PreferenceCategory
        app:key="@string/audio_settings_key"
        app:title="@string/settings">

        <ListPreference
            app:defaultValue="@string/default_audio_encoder"
            app:key="@string/audio_encoder_key"
            app:title="@string/audio_encoder"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="12"
            app:entries="@array/AudioChannelConfigEntries"
            app:entryValues="@array/AudioChannelConfigEntryValues"
            app:key="@string/audio_channel_config_key"
            app:title="@string/audio_number_of_channels"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="128000"
            app:entryValues="@array/AudioBitrateEntryValues"
            app:key="@string/audio_bitrate_key"
            app:title="@string/audio_bitrate"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="44100"
            app:key="@string/audio_sample_rate_key"
            app:title="@string/audio_sample_rate"
            app:useSimpleSummaryProvider="true" />

        <!-- Byte format locked to 16 bits (other formats are glitchy) -->
        <ListPreference
            app:defaultValue="2"
            app:key="@string/audio_byte_format_key"
            app:title="@string/audio_byte_format"
            app:useSimpleSummaryProvider="true"
            app:enabled="false" />

        <ListPreference
            app:defaultValue="2"
            app:key="@string/audio_profile_key"
            app:title="@string/audio_profile"
            app:useSimpleSummaryProvider="true" />

        <!-- Audio Source Type -->
        <ListPreference
            app:defaultValue="5"
            app:key="@string/audio_source_type_key"
            app:title="@string/audio_source_type"
            app:entries="@array/AudioSourceTypeEntries"
            app:entryValues="@array/AudioSourceTypeEntryValues"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>
